--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="row g-0" data-controller="navigation-bookmarks mobile-navigation">
+<div class="row g-0" data-controller="mobile-navigation">
   <div class="col">
     <!-- Mobile Navigation -->
     <div class="d-md-none">
@@ -88,13 +88,6 @@
             <i class="fas fa-envelope me-3"></i> 
             <span>Newsletter</span>
           </a>
-          <a href="/guardados" 
-             data-navigation-bookmarks-target="bookmarksLink"
-             data-action="click->mobile-navigation#close"
-             class="mobile-nav-item d-none <%= current_page?('/guardados') ? 'active' : '' %>">
-            <i class="fas fa-bookmark me-3"></i> 
-            <span>Guardados</span>
-          </a>
           <a href="/servicios" 
              data-action="click->mobile-navigation#close"
              class="mobile-nav-item <%= current_page?('/servicios') ? 'active' : '' %>">
@@ -131,12 +124,6 @@
         <a href="/newsletter" class="nav-item <%= current_page?('/newsletter') ? 'active' : '' %>">
           <i class="fas fa-envelope nav-icon"></i>
           <span class="nav-text">Newsletter</span>
-        </a>
-        <a href="/guardados" 
-           data-navigation-bookmarks-target="bookmarksLink"
-           class="nav-item d-none <%= current_page?('/guardados') ? 'active' : '' %>">
-          <i class="fas fa-bookmark nav-icon"></i>
-          <span class="nav-text">Guardados</span>
         </a>
         <a href="/servicios" class="nav-item <%= current_page?('/servicios') ? 'active' : '' %>">
           <i class="fas fa-cogs nav-icon"></i>
