ui & performance updates

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -250,7 +250,7 @@
 }
 
 .analytics-body, .chart-body, .posts-body {
-  padding: 1.5rem;
+  padding: 1.5rem 0 1.5rem 0;
 }
 
 // Dashboard Header Enhancement
