social net order share

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -84,17 +84,20 @@
              data-share-buttons-title-value="<%= @post.title %>"
              data-share-buttons-description-value="<%= strip_tags(@post.body.to_plain_text).truncate(160) %>">
           <div class="btn-group" role="group">
-            <button data-action="click->share-buttons#shareTwitter" class="btn btn-outline-primary btn-sm" title="Compartir en Twitter">
-              <i class="fab fa-twitter"></i>
+            <button data-action="click->share-buttons#shareMastodon" class="btn btn-outline-primary btn-sm" title="Compartir en Mastodon">
+              <i class="fab fa-mastodon"></i>
             </button>
             <button data-action="click->share-buttons#shareLinkedIn" class="btn btn-outline-primary btn-sm" title="Compartir en LinkedIn">
               <i class="fab fa-linkedin"></i>
             </button>
-            <button data-action="click->share-buttons#shareFacebook" class="btn btn-outline-primary btn-sm" title="Compartir en Facebook">
-              <i class="fab fa-facebook"></i>
-            </button>
             <button data-action="click->share-buttons#shareWhatsApp" class="btn btn-outline-success btn-sm" title="Compartir en WhatsApp">
               <i class="fab fa-whatsapp"></i>
+            </button>
+            <button data-action="click->share-buttons#shareTwitter" class="btn btn-outline-primary btn-sm" title="Compartir en Twitter">
+              <i class="fab fa-twitter"></i>
+            </button>
+            <button data-action="click->share-buttons#shareFacebook" class="btn btn-outline-primary btn-sm" title="Compartir en Facebook">
+              <i class="fab fa-facebook"></i>
             </button>
             <button data-action="click->share-buttons#copyLink" class="btn btn-outline-secondary btn-sm" title="Copiar enlace">
               <i class="fas fa-link"></i>
